[package]
name = "rag-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-s3 = "1.117.0"
axum = { version = "0.8.7", features = ["multipart"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.8", features = ["cors"] }
