[package]
name = "rag-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
extractous = "0.3.0"
kiru = "0.1.11"
num_cpus = "1.17.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
